# EpitechJam2023

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  Dockerfile  Dockerfile.windows  build.ps1  build.sh  docker-compose.yml
cmake/toolchains/: mingw-w64-x86_64.cmake
src/helper/math/: math.cpp
src/resource_manager/: ResourceManager.cpp
